Mudança no tratamento de DATA e REM.